deployment/postgres/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fc-postgres
  labels:
    app: fc-postgres
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: fc-postgres
