deployment/postgres/postgres-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
  name: fc-postgres-ingress
  namespace: federated-catalogue
spec:
  rules:
  - host: fc-postgres.gxfs.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fc-postgres
            port:
              number: 5432
  tls:
  - hosts:
    - fc-postgres.gxfs.dev
    secretName: wildcard-gxfs-dev
